updated min-height to match the min-width for the grid in order to maintain the correct ratio and fix the stretching error for mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -73,7 +73,7 @@ header {
     width: 80vw;
     height: 80vw;
     min-width: 280px;
-    min-height: 300px;
+    min-height: 280px;
     max-width: 35rem;
     max-height: 35rem;
     overflow: hidden;
